# mcp-armor

./: .clippy.toml  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml  server.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  scorecard.yml  supply-chain.yml
benches/: scanner.rs
cve-feed/: curated-2026-05-28.toml  ox-advisory-2026-04-15.toml
src/: error.rs  lib.rs  main.rs  rmcp_server.rs  sigstore_bridge_stub.rs  util.rs
src/control/: history.rs  mod.rs  tools.rs
src/cve/: feed.rs  mod.rs
src/manifest/: canonical.rs  drift.rs  ed25519.rs  mod.rs  sigstore.rs  tofu.rs
src/otel/: exporter.rs  mod.rs
src/policy/: loader.rs  mod.rs  reload.rs
src/proxy/: mod.rs  stdio.rs
src/scanner/: aho.rs  confusable.rs  mod.rs  regex_stage.rs  unicode.rs
tests/: cve_simulation.rs  integration_control.rs  integration_drift_v05.rs  integration_drift_v05_r1_fixes.rs  integration_manifest.rs  integration_per_tool_allowlist_v02.rs  integration_sahnehauben_v03.rs  integration_sigstore_v02.rs  integration_tofu_v02.rs  integration_tool_name_collision_v07.rs  integration_v03_features.rs  integration_v04_features.rs  integration_v06_features.rs  perf_gate.rs
