[package]
name = "mcp-armor"
version = "0.7.0"
edition = "2021"
rust-version = "1.89"
license = "MIT"
description = "Drop-in Rust sidecar that wraps any MCP server: scans tool calls for prompt injection (UTS-39 confusable-folding + Unicode strip + Aho+Regex), validates Ed25519 manifest signatures with TOFU keystore + Sigstore Rekor bridge, strips loader-class env keys (LD_PRELOAD, NODE_OPTIONS, ...) from spawned children, detects tools/list schema drift (Layer 7 closes rug-pull / silent-redefinition class with NFKC-canonical fingerprint + bidirectional inbound/outbound gate + BLAKE3 or SHA-256 backend for FIPS/PCI/HIPAA + optional JCS RFC 8785 canonicalisation + _meta.fingerprint cross-tool audit injection), serves a fully-wired rmcp 1.5 control-plane behind the rmcp-control feature (MCP spec 2025-11-25, closes CVE-2026-42559 transitively), exports OTLP gRPC telemetry, blocks marketplace-poisoning vectors. <5ms p99 overhead."
repository = "https://github.com/studiomeyer-io/mcp-armor"
homepage = "https://github.com/studiomeyer-io/mcp-armor"
authors = ["Matthias Meyer (StudioMeyer) <hi@studiomeyer.io>"]
keywords = ["mcp", "security", "wrapper", "sidecar", "prompt-injection"]
categories = ["command-line-utilities"]
readme = "README.md"

[lib]
name = "mcp_armor"
path = "src/lib.rs"

[[bin]]
name = "mcp-armor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "io-std", "io-util", "macros", "process", "time", "sync", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# v0.4 OTLP stack upgrade 0.27 → 0.30 — closes the BatchSpanProcessor
# shutdown-hang class that bit the 0.27 release (see
# open-telemetry/opentelemetry-rust#2071 + #2798). The 0.28 line dropped
# the explicit `runtime::Tokio` parameter and rewrote
# BatchSpanProcessor/PeriodicReader to run on a dedicated background
# thread instead of relying on a tokio runtime — that change alone fixes
# the historical shutdown deadlock without behavioural surprises in
# fmt-only default builds. We hold at 0.30 rather than chase 0.32 because
# 0.31 reworked the metrics SDK in ways we don't consume and 0.32 changed
# the OTLP feature-flag layout again; 0.30 is the LTS-shaped step.
opentelemetry = { version = "0.30", default-features = false, features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.30", default-features = false, features = ["trace", "experimental_trace_batch_span_processor_with_async_runtime", "rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.30", default-features = false, features = ["trace", "grpc-tonic"], optional = true }
ed25519-dalek = { version = "2.1", features = ["pem", "rand_core"] }
regex = "1.10"
aho-corasick = "1.1"
clap = { version = "4.5", features = ["derive", "env"] }
unicode-normalization = "0.1"
blake3 = "1.5"
base64 = "0.22"
toml = "0.8"
semver = "1"
tempfile = "3.10"
# v0.4 — replace hand-rolled SHA-256 (~135 LOC, NIST-vector-validated but
# unaudited) with the RustCrypto `sha2` crate. The audit-trail path
# (Rekor artifact hashing) shouldn't sit on hand-rolled cryptography
# when a battle-tested, formally-audited alternative is one dep away.
# `sha2 = "0.11"` brings in `digest = "0.11"` and `cpufeatures` — both
# RustCrypto, both already widely depended on. `hex` is the canonical
# hex encoder companion (3.5KB SLoC, zero deps).
sha2 = "0.11"
hex = "0.4"
# v0.4 — file locking for concurrent CLI `keystore pin` race (Critic M1
# from v0.3 review). `fs2` is the standard advisory `flock(2)` wrapper
# (62 M downloads, stable since 2018, zero deps beyond libc). Used in
# `manifest::tofu::Keystore::persist_locked` to make load → mutate →
# persist a single critical section across processes on the same host.
fs2 = "0.4"
# v0.2 Round-1-review observation (Analyst #2): `rusqlite` was declared as
# an optional dep for an `audit-db` feature that was *never* wired into
# any code path. Removing it: shipping a feature flag that does nothing is
# a Lumina anti-pattern (S982). When SQLite-backed audit storage actually
# ships in v0.3 the dep + feature come back together with the code that
# uses them.
# v0.2 Sigstore Rekor bridge — uses a thin reqwest-based REST client against
# the Rekor v1 API (`/api/v1/index/retrieve`, `/api/v1/log/entries/{uuid}`).
# We deliberately do NOT pull in `sigstore-rs` itself: that crate is pre-1.0
# (`will not be considered stable until 1.0`), brings 30+ transitive deps,
# and its API churns between 0.10 and 0.11. The bundle JSON format and the
# Rekor REST API are stable, so a thin local implementation gives us the
# same value with a fraction of the audit surface. reqwest::blocking is
# already in the dep-cache used elsewhere in the StudioMeyer stack.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
# v0.7 — rmcp 0.1.5 → 1.5 migration. The official MCP Rust SDK reached
# 1.0 (4t145/rmcp merged into the upstream
# anthropic/modelcontextprotocol repository) and 1.4 added Host-header
# validation that closes CVE-2026-42559 (DNS-rebinding via Streamable
# HTTP server transport, CVSS 8.8 HIGH, PUBLIC on the NVD since
# 2026-05-14, GHSA-89vp-x53w-74fx, RUSTSEC-2026-0140). We don't use the
# Streamable HTTP transport (stdio only) so the CVE is not exploitable
# in mcp-armor today, but upgrading the dep range closes the advisory
# transitively in `cargo audit` / rustsec so downstream operators don't
# see a yellow `cargo audit` after `cargo install mcp-armor`.
#
# The `version = "1.5"` constraint is a FLOOR per Cargo semver rules —
# `^1.5` resolves to anything in `[1.5.0, 2.0.0)`. Cargo.lock today
# resolves to rmcp 1.7.0 (latest at v0.7 tag time). 1.6 added the
# StreamableHttpService Host-allowlist (the CVE patch itself); 1.7
# added stdio parse-error replies + chrono default-features removal.
# None of 1.5 → 1.7 changed the `ServerHandler` / `RequestContext` /
# `CallToolRequestParams` / `MaybeSendFuture` surfaces our manual
# `rmcp_server.rs` impl depends on, so the floor stays at 1.5 and the
# resolver picks the highest available patch. A future 1.8+ release
# that breaks the trait shape would fail to compile our impl and would
# be a deliberate Cargo.toml floor bump.
#
# Feature set kept minimal: `server` + `transport-io` only. v0.7 R1
# Analyst Concern-4 suggested `features = ["macros"]` could be removed
# to shrink the audit surface; v0.7 R2 verified that the only effect of
# that removal is dropping the `rmcp-macros` proc-macro crate from the
# tree — `schemars` itself remains a non-optional dep of `rmcp 1.7.0`'s
# core crate (it bounds `Tool::input_schema` and related model types
# regardless of which feature flags are set). The audit surface
# reduction is therefore the proc-macro machinery (`darling`,
# `serde_derive_internals`, `rmcp-macros` itself) — non-trivial, just
# not the `schemars` removal the R1 comment originally implied.
rmcp = { version = "1.5", default-features = false, features = ["server", "transport-io"], optional = true }
# v0.6 — RFC 8785 JSON Canonicalization Scheme (JCS) for tools/list
# fingerprinting. When the `jcs-canonical` feature is on the drift
# pipeline canonicalises the per-tool JSON sub-tree per RFC 8785 (sorted
# keys, ECMA-262 number serialisation, I-JSON Unicode normalisation)
# before hashing instead of relying on our own sort-by-name-only
# heuristic. Closes the cross-implementation interop gap with IETF
# MCPS (`draft-sharif-mcps-secure-mcp`) + MIS sealed-manifest publishers
# who emit JCS-canonical envelopes. `serde_json_canonicalizer` is the
# actively-maintained 100%-RFC-compatible crate (it explicitly
# documents the gaps in the older `serde_jcs` crate that motivated its
# fork). Zero transitive deps beyond `serde_json` which we already pull.
serde_json_canonicalizer = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.5"
insta = "1.40"
tempfile = "3.10"

[features]
default = []
# `audit-db` removed in v0.2.0 — was a Lumina-class empty feature flag
# (Cargo.toml-declared, never referenced in src/). Will land in v0.3
# alongside the actual SQLite-backed ScanHistory implementation.
# v0.2 OTLP gRPC export. When enabled wires the real opentelemetry stack:
# - SpanExporter via grpc-tonic against $OTEL_EXPORTER_OTLP_ENDPOINT
# - BatchSpanProcessor with rt-tokio so the hot path never blocks on flush
# When disabled (default) the otel module compiles down to a stderr-json-only
# tracing-subscriber init — same behaviour as v0.1.
otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
]
# v0.2 Sigstore Rekor bridge — replaces the v0.1 no-op stub. Enabling this
# brings in `reqwest::blocking` for the Rekor REST queries; the cosign bundle
# JSON parser is in-tree (zero extra deps). Provides:
#  - manifest::sigstore::Bundle::parse for cosign sigstore.json bundles
#  - manifest::sigstore::lookup_rekor_by_hash for transparency-log lookups
#  - manifest::sigstore::verify_inclusion for offline SET verification
# Default: off so the audit surface stays small.
sigstore-bridge = ["dep:reqwest"]
# v0.2 rmcp control-plane migration (PLAN R5 ORIGINAL). When enabled, the
# control-plane subcommand exposes an rmcp-based server in parallel to the
# hand-rolled JSON-RPC server (the hand-rolled one stays as default — both
# share the same Scanner/Policy/ScanHistory state).
rmcp-control = ["dep:rmcp"]
# v0.6 — JCS (RFC 8785) JSON canonicalisation for drift fingerprints.
# When enabled, `manifest::drift::fingerprint` canonicalises the per-tool
# JSON sub-tree before hashing instead of the v0.5 sort-by-name-only
# heuristic. Off by default — the v0.5 heuristic is stable and
# interoperable with the existing tools-history.toml schema; JCS only
# matters when the operator wants byte-identical fingerprints against
# IETF MCPS / MIS sealed-manifest reference implementations. Adds
# `serde_json_canonicalizer` (zero transitive deps).
jcs-canonical = ["dep:serde_json_canonicalizer"]

[[bench]]
name = "scanner"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
